# rs485-control

./: Cargo.toml  README.md  package.sh
src/: main.rs  rs485.ui  rs485a.ui
src/app/: build_ui.rs  device.rs  mod.rs  text_formatting.rs  values.rs  window.rs
