[package]
name = "rs485-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.7", package = "gtk4"}
glib = "0.15.10"
glib-macros = "0.15.10"
crc = "2.0"
serialport = "4.0.1"
chrono = "0.4"

[dependencies.adw]
package = "libadwaita"
version = "0.1.1"